feat(api/visual): Show 10 pokemons
* Logic to fetch 10 pokemons from the api
* Pokedex container with initial styles created
* Card component with initial styles created
* Show pokemons from api using Pokedex & Card component

--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding: 10px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@media (min-width: 600px) {
+  body {
+    width: 100%;
+    max-width: 1060px;
+    margin: 0 auto;
+  }
 }
