--- a/src/containers/Pokedex/components/Card/styles.css
+++ b/src/containers/Pokedex/components/Card/styles.css
@@ -1,9 +1,11 @@
 .card {
   display: flex;
   flex-direction: column;
-  background-color: dimgray;
+  background-color: #363E64;
   text-align: center;
-  margin: 10px; 
+  margin: 10px;
+  border-radius: 15px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 }
 
 .card-image {
