--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   padding: 10px;
+  background-color: #2A3050;
+  color: #fff;
 }
 
 @media (min-width: 600px) {
