refactor(routing): update route/page names
* Created home page
* Moved Pokedex to home
* renamed page 'Pokemon' to 'PokemonDetails' (same with the component)

--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -2,5 +2,6 @@
   background-color: #F7BA17;
   border-radius: 8px;
   padding: 10px;
-  color: #2A3050; 
+  color: #2A3050;
+  font-weight: bold;
 }
