--- a/src/containers/Pokedex/components/Card/styles.css
+++ b/src/containers/Pokedex/components/Card/styles.css
@@ -3,11 +3,15 @@
   flex-direction: column;
   background-color: #363E64;
   text-align: center;
-  margin: 10px;
   border-radius: 15px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 }
 
 .card-image {
   height: 180px;
+  width: 100%;
+}
+
+.image-loader-text {
+  color: #F7BA17;
 }
