--- a/src/containers/Pokedex/styles.css
+++ b/src/containers/Pokedex/styles.css
@@ -7,4 +7,14 @@
 .nav-link {
   text-decoration: none;
   color: #fff;
+  margin: 10px;
+  width: 180px;
+}
+
+.display-none {
+  display: none;
+}
+
+.display-block {
+  display: block;
 }
